edited projekt name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-english-word-api",
+  "name": "learn-english-words-api",
   "version": "0.0.0",
   "private": true,
   "scripts": {
