--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.9.1",
     "mongoose": "^7.0.4",
     "morgan": "1.10.0"
   },
