--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "joi": "^17.9.1",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "query-string": "^8.1.0"
   },
   "devDependencies": {
     "eslint": "7.19.0",
