--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "morgan": "1.10.0",
-    "query-string": "^8.1.0"
+    "nodemailer": "^6.9.2",
+    "query-string": "^8.1.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "7.19.0",
