--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,11 @@ ACCESS_TOKEN_TIME
 REFRESH_TOKEN_TIME
 GOOGLE_CLIENT_ID
 GOOGLE_CLIENT_SECRET
+FRONTEND_URL
+SMTP_HOST
+SMTP_PORT
+SMTP_USER
+SMTP_PASSWORD
+EMAIL_DEVELOPER
+BASE_URL
+COUNT_GET_WORDS
